versioned_docs/version-5.0/client-api/operations/maintenance/connection-strings/content/_add-connection-string-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

* You can add a connection string by using the [PutConnectionStringOperation](../../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#putconnectionstringoperation) method.

* This article demonstrates how to connect to an external database.  

In this page:

* [PutConnectionStringOperation](../../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#putconnectionstringoperation)  
* [Add a Raven Connection String](../../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-a-raven-connection-string)  
* [Add an Sql Connection String](../../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-an-sql-connection-string)  

## `PutConnectionStringOperation`

<TabItem value="add_connection_string" label="add_connection_string">
<CodeBlock language="csharp">
{`public PutConnectionStringOperation(T connectionString)
`}
</CodeBlock>
</TabItem>

| Parameters | Connection String Type | Description |
| ------------- | ----- | ---- |
| **connectionString** | `Raven` | Connection string to create: `RavenConnectionString` |
| **connectionString** | `Sql` | Connection string to create: `SqlConnectionString` |


#### `ConnectionString`

<TabItem value="connection_string" label="connection_string">
<CodeBlock language="csharp">
{`public class ConnectionString
\{
    public string Name \{ get; set; \} // name of connection string        
\}
`}
</CodeBlock>
</TabItem>





## Add a Raven Connection String

<Admonition type="note" title="Secure servers" id="secure-servers" href="#secure-servers">
 To [connect secure RavenDB servers](../../../../../server/security/authentication/certificate-management.mdx#enabling-communication-between-servers:-importing-and-exporting-certificates) 
 you need to 

  1. Export the server certificate from the source server. 
  2. Install it as a client certificate on the destination server.  

</Admonition>

<TabItem value="add_raven_connection_string" label="add_raven_connection_string">
<CodeBlock language="csharp">
{`PutConnectionStringOperation<RavenConnectionString> operation
    = new PutConnectionStringOperation<RavenConnectionString>(
        new RavenConnectionString
        \{
            Name = "raven2",
            Database = "Northwind2",
            TopologyDiscoveryUrls = new[]
            \{
                "https://rvn2:8080"
            \}
        \});

PutConnectionStringResult connectionStringResult
    = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>

* `RavenConnectionString` 
<TabItem value="raven_connection_string" label="raven_connection_string">
<CodeBlock language="csharp">
{`public class RavenConnectionString : ConnectionString
\{
    public string Database \{ get; set; \} // target database name
    public string[] TopologyDiscoveryUrls; // list of server urls

    public ConnectionStringType Type => ConnectionStringType.Raven;

\}
`}
</CodeBlock>
</TabItem>





## Add an Sql Connection String

<TabItem value="add_sql_connection_string" label="add_sql_connection_string">
<CodeBlock language="csharp">
{`PutConnectionStringOperation<SqlConnectionString> operation
    = new PutConnectionStringOperation<SqlConnectionString>(
        new SqlConnectionString
        \{
            Name = "local_mysql",
            FactoryName = "MySql.Data.MySqlClient",
            ConnectionString = "host=127.0.0.1;user=root;database=Northwind"
        \});

PutConnectionStringResult connectionStringResult
    = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>

* `SqlConnectionString` 
<TabItem value="sql_connection_string" label="sql_connection_string">
<CodeBlock language="csharp">
{`public class SqlConnectionString : ConnectionString
\{
    public string ConnectionString \{ get; set; \}

    public string FactoryName \{ get; set; \}

    public ConnectionStringType Type => ConnectionStringType.Sql;

\}
`}
</CodeBlock>
</TabItem>




